MAPRYARN-383: Added property for ATSv1.5 on JDK17